<resources>
    <string name="app_name">CryptoApp</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="symbols_format_template">%s / %s</string>
    <string name="coin_logo">Логотип криптовалюты</string>
    <string name="price">Цена:</string>
    <string name="min_for_day">Минимум за день:</string>
    <string name="max_for_day">Максиммум за день:</string>
    <string name="last_market">Последняя сделка:</string>
    <string name="slash">/</string>
    <string name="update">Обновлено:</string>
</resources>