<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utils.CoinDetailActivity">

    <ImageView
        android:id="@+id/imageViewCoinLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/coin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFromSym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCoinLogo"
        tools:text="T"/>

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/slash"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCoinLogo" />

    <TextView
        android:id="@+id/tvToSym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCoinLogo"
        tools:text="T"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFromSym" />

    <TextView
        android:id="@+id/tvMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/min_for_day"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/max_for_day"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMin" />

    <TextView
        android:id="@+id/tvLastMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/last_market"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMax" />

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastMarket" />

    <TextView
        android:id="@+id/tvPriceVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvFromSym"
        tools:text="54.6"/>

    <TextView
        android:id="@+id/tvMinVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvMin"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceVal"
        tools:text="50.5"/>

    <TextView
        android:id="@+id/tvMaxVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvMax"
        app:layout_constraintTop_toBottomOf="@+id/tvMinVal"
        tools:text="55.5"/>

    <TextView
        android:id="@+id/tvLastMarketVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvLastMarket"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxVal"
        tools:text="Bit"/>

    <TextView
        android:id="@+id/tvUpdateVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvUpdate"
        app:layout_constraintTop_toBottomOf="@+id/tvLastMarketVal"
        tools:text="00:00:00"/>

</androidx.constraintlayout.widget.ConstraintLayout>